Fix button clickability by adjusting particle background z-index

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -514,7 +514,7 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: -1;
   opacity: 0.3;
 }
 
